[gd_scene load_steps=3 format=3 uid="uid://dragmatchgame"]

[ext_resource type="Script" path="res://scripts/DragMatchGame.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/textures/games/drag_match/dragmatch_bg.png" id="2"]

[node name="DragMatchGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="GameContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="GameContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BackButton" type="Button" parent="GameContainer/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(50, 50)
text = "<"

[node name="ObjectiveLabel" type="Label" parent="GameContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 3
clip_text = true
theme_type_variation = &"HeaderSmall"
text = ""
vertical_alignment = 1

[node name="ProgressLabel" type="Label" parent="GameContainer/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(110, 0)
size_flags_horizontal = 0
horizontal_alignment = 2
theme_type_variation = &"HeaderSmall"
text = "0/0"
vertical_alignment = 1

[node name="WayangMascot" type="AnimatedSprite2D" parent="GameContainer/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(60, 60)

[node name="GameContent" type="VBoxContainer" parent="GameContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="SlotsContainer" type="GridContainer" parent="GameContainer/GameContent"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="Spacer" type="Control" parent="GameContainer/GameContent"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="ShapesContainer" type="HBoxContainer" parent="GameContainer/GameContent"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20
